added player and coach asset

--- a/playerStaff.html
+++ b/playerStaff.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakers Fan Site</title>
     <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="playercard.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="javascript.js"></script>
 </head>
@@ -24,6 +25,39 @@
             <li><a href="about.html" id="nav6">About</a></li>
         </ul>
     </nav>
-
+    <div class="content">
+        <div id="player">
+            <h1>Roster</h2>
+            <br>
+            <div id="player1">
+                <img src="./Asset Image/castleton.webp" alt="">
+            </div>
+            <div id="player2">
+                <img src="./Asset Image/christie.webp" alt="">
+            </div>
+            <div id="player3">
+                <img src="./Asset Image/davis.webp" alt="">
+            </div>
+            <div id="player4">
+                <img src="./Asset Image/fudge.webp" alt="">
+            </div>
+            <div id="player5">
+                <img src="./Asset Image/hachimura.webp" alt="">
+            </div>
+            <div id="player6">
+                <img src="./Asset Image/hayes.webp" alt="">
+            </div>
+            <div id="player7">
+                <img src="./Asset Image/hoodschifino.webp" alt="">
+            </div>
+        </div>
+        
+        <div id="coachStaff">
+            <div>
+                <img src="./Asset Image/carroll-demarre-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0039.webp" alt="">
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
