added bestPlay asset, etc

--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakers Fan Site</title>
-    <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="./css/indexStyle.css">
+    <link rel="stylesheet" href="./css/faq.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="javascript.js"></script>
 </head>
@@ -24,6 +25,25 @@
             <li><a href="about.html" id="nav6">About</a></li>
         </ul>
     </nav>
-
+    <div class="content">
+        <h1>FAQ: LakersNation Frequently Asked Questions</h1>
+        <br>
+        <p>This FAQ page was created to provide you with immediate answers to your questions about LakersNation.com. If you are unable to find an answer to your question on this FAQ page,  please drop us a line by clicking on Contact Us.</p>
+        <br>
+        <h2>Los Angeles Lakers</h2>
+        <br>
+        <h3>Where can I watch to Lakers games?</h3>
+        <p>Spectrum SportsNet airs Lakers games locally.</p>
+        <br>
+        <h3>Where can I listen to Lakers games?</h3>
+        <p>Lakers games are broadcast on 710AM ESPN L.A.</p>
+        <br>
+        <h3>Where do Lakers play?</h3>
+        <p>The Lakers play at the Crypto.com Arena at  1111 S Figueroa St, Los Angeles, CA 90015</p>
+        <br>
+        <h3>Where can I buy Lakers tickets?</h3>
+        <p>Lakers single-game tickets can be bought on <a href="axs.com">AXS.com</a></p>
+    
+    </div>
 </body>
 </html>
