--- a/playerStaff.html
+++ b/playerStaff.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakers Fan Site</title>
-    <link rel="stylesheet" href="indexStyle.css">
-    <link rel="stylesheet" href="playercard.css">
+    <link rel="stylesheet" href="./css/indexStyle.css">
+    <link rel="stylesheet" href="./css/playercard.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="javascript.js"></script>
 </head>
@@ -26,38 +26,100 @@
         </ul>
     </nav>
     <div class="content">
+        <h1>Roster</h1>
         <div id="player">
-            <h1>Roster</h2>
-            <br>
-            <div id="player1">
-                <img src="./Asset Image/castleton.webp" alt="">
-            </div>
-            <div id="player2">
-                <img src="./Asset Image/christie.webp" alt="">
-            </div>
-            <div id="player3">
-                <img src="./Asset Image/davis.webp" alt="">
-            </div>
-            <div id="player4">
-                <img src="./Asset Image/fudge.webp" alt="">
-            </div>
-            <div id="player5">
-                <img src="./Asset Image/hachimura.webp" alt="">
-            </div>
-            <div id="player6">
-                <img src="./Asset Image/hayes.webp" alt="">
-            </div>
-            <div id="player7">
-                <img src="./Asset Image/hoodschifino.webp" alt="">
-            </div>
+            <p>
+                <div id="player1">
+                    <img src="./Asset Image/castleton.webp" alt="">
+                </div>
+                <div id="player2">
+                    <img src="./Asset Image/christie.webp" alt="">
+                </div>
+                <div id="player3">
+                    <img src="./Asset Image/davis.webp" alt="">
+                </div>
+                <div id="player4">
+                    <img src="./Asset Image/fudge.webp" alt="">
+                </div>
+                <div id="player5">
+                    <img src="./Asset Image/hachimura.webp" alt="">
+                </div>
+                <div id="player6">
+                    <img src="./Asset Image/hayes.webp" alt="">
+                </div>
+                <div id="player7">
+                    <img src="./Asset Image/hoodschifino.webp" alt="">
+                </div>
+                <div id="player8">
+                    <img src="./Asset Image/hodge.webp" alt="">
+                </div>
+                <div id="player9">
+                    <img src="./Asset Image/james.webp" alt="">
+                </div>
+                <div id="player10">
+                    <img src="./Asset Image/lewis.webp" alt="">
+                </div>
+                <div id="player11">
+                    <img src="./Asset Image/prince.webp" alt="">
+                </div>
+                <div id="player12">
+                    <img src="./Asset Image/reaves.webp" alt="">
+                </div>
+                <div id="player13">
+                    <img src="./Asset Image/reddish.webp" alt="">
+                </div>
+                <div id="player14">
+                    <img src="./Asset Image/russell.webp" alt="">
+                </div>
+                <div id="player15">
+                    <img src="./Asset Image/vanderbilt.webp" alt="">
+                </div>
+                <div id="player16">
+                    <img src="./Asset Image/vincent.webp" alt="">
+                </div>
+                <div id="player17">
+                    <img src="./Asset Image/wood.webp" alt="">
+                </div>
+            </p>
         </div>
-        
+        <h1>Coaching Staff</h1>
         <div id="coachStaff">
-            <div>
-                <img src="./Asset Image/carroll-demarre-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0039.webp" alt="">
-            </div>
+            <p>
+                <div>
+                    <img src="./Asset Image/carroll-demarre-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0039.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/dubois-jd-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0035.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/fraction-micah-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0031.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/ham-darvin-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0087.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/handy-phil-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0047.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/jent-chris-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0025.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/ott-jordan-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0005.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/peterson-zach-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0009.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/rimmer-schuyler-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0015.webp" alt="">
+                </div>
+                <div>
+                    <img src="./Asset Image/serge-davidheadshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0017.webp" alt="">
+                </div>
+                <div>
+                    <img src="/Asset Image/wise-ralik-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0022.webp" alt="">
+                </div>
+            </p>
         </div>
     </div>
-    
 </body>
 </html>
