--- a/bestPlay.html
+++ b/bestPlay.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakers Fan Site</title>
-    <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="./css/indexStyle.css">
+    <link rel="stylesheet" href="./css/bestPlay.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="javascript.js"></script>
 </head>
@@ -24,6 +25,40 @@
             <li><a href="about.html" id="nav6">About</a></li>
         </ul>
     </nav>
-
+    <div class="content">
+        <h1>All Time Lakers Top 10 Play</h1>
+        <div id="allVid">
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div>
+                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
