--- a/rumours.html
+++ b/rumours.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakers Fan Site</title>
-    <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="./css/indexStyle.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="javascript.js"></script>
 </head>
