added coach asset to slider

--- a/playerStaff.html
+++ b/playerStaff.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="content">
         <section class="container">
-            <h1>Players</h1>
+            <h1 style="margin-bottom: 100px;">Players & Coaching Staffs</h1>
             <div class="slideshow-container">
                 <div class="mySlides fade">
                     <div class="card-slider">
@@ -434,13 +434,7 @@
                                     <div class="overlay">
                                         <div class="text">
                                             <b>Carrol Demarre</b>
-                                            <small>Position: <strong>Forward</strong> <br> 
-                                                Jersey Number: <strong>21</strong> <br>
-                                                Date of Birth: <strong>-</strong> <br>
-                                                Years Pro: <strong>-</strong> <br>
-                                                Height: <strong>6'8"</strong> <br>
-                                                Weight: <strong>192 lbs</strong> <br>
-                                                From: <strong>-</strong> <br>
+                                            <small>Position: <strong>Assistant Coach</strong> <br> 
                                             </small>
                                         </div>
                                     </div>
@@ -448,20 +442,14 @@
                             </div>
                             <div class="player-column">
                                 <div class="con">
-                                    <img src="Asset Image/russell.webp"
-                                        alt="russell"
+                                    <img src="Asset Image/dubois-jd-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0035.webp"
+                                        alt="dubois"
                                         class="img"
                                         style="width:100%">
                                     <div class="overlay">
                                         <div class="text">
-                                            <b>D'Angelo Russell</b>
-                                            <small>Position: <strong>Guard</strong> <br> 
-                                                Jersey Number: <strong>1</strong> <br>
-                                                Date of Birth: <strong>02/23/1996</strong> <br>
-                                                Years Pro: <strong>8</strong> <br>
-                                                Height: <strong>6'3"</strong> <br>
-                                                Weight: <strong>193 lbs</strong> <br>
-                                                From: <strong>Ohio State/USA</strong> <br>
+                                            <b>J.D. Dubois</b>
+                                            <small>Position: <strong>Assistant Coach</strong> <br> 
                                             </small>
                                         </div>
                                     </div>
@@ -469,20 +457,152 @@
                             </div>
                             <div class="player-column">
                                 <div class="con">
-                                    <img src="Asset Image/vanderbilt.webp"
-                                        alt="vanderbilt"
+                                    <img src="Asset Image/fraction-micah-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0031.webp"
+                                        alt="fraction"
                                         class="img"
                                         style="width:100%">
                                     <div class="overlay">
                                         <div class="text">
-                                            <b>Jarred vanderbilt</b>
-                                            <small>Position: <strong>Forward</strong> <br> 
-                                                Jersey Number: <strong>2</strong> <br>
-                                                Date of Birth: <strong>04/03/1999</strong> <br>
-                                                Years Pro: <strong>5</strong> <br>
-                                                Height: <strong>6'8"</strong> <br>
-                                                Weight: <strong>214 lbs</strong> <br>
-                                                From: <strong>Kentucky/USA</strong> <br>
+                                            <b>Micah Fraction</b>
+                                            <small>Position: <strong>Head Video Controller</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="card-slider">
+                        <div class="player-row">
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/ham-darvin-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0087.webp"
+                                        alt="darvin"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>Darvin Ham</b>
+                                            <small>Position: <strong>Head Coach</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/handy-phil-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0047.webp"
+                                        alt="handy"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>Phil Handy</b>
+                                            <small>Position: <strong>Assistant Coach</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/jent-chris-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0025.webp"
+                                        alt="jent"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>Chris Jent</b>
+                                            <small>Position: <strong>Head Video Controller</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="card-slider">
+                        <div class="player-row">
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/ott-jordan-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0005.webp"
+                                        alt="ott"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>Jordan Ott</b>
+                                            <small>Position: <strong>Assistant Coach</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/peterson-zach-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0009.webp"
+                                        alt="peterson"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>Zach Peterson</b>
+                                            <small>Position: <strong>Assistant Coach</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/rimmer-schuyler-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0015.webp"
+                                        alt="rimmer"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>Schuyler Rimmer</b>
+                                            <small>Position: <strong>Head Video Controller</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="card-slider">
+                        <div class="player-row">
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/serge-davidheadshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0017.webp"
+                                        alt="serge"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>David Serge</b>
+                                            <small>Position: <strong>Assistant Video Coordinator</strong> <br> 
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="player-column">
+                                <div class="con">
+                                    <img src="Asset Image/wise-ralik-headshot-2324-1000x1000-776037980_Lakers_Media_Day_Ohigashi_0022.webp"
+                                        alt="wise"
+                                        class="img"
+                                        style="width:100%">
+                                    <div class="overlay">
+                                        <div class="text">
+                                            <b>Ralik Wise</b>
+                                            <small>Position: <strong>Assistant Video Coordinator</strong> <br> 
                                             </small>
                                         </div>
                                     </div>
@@ -509,6 +629,7 @@
                 <span class="dot" onclick="currentSlide(7)"></span>
                 <span class="dot" onclick="currentSlide(8)"></span>
                 <span class="dot" onclick="currentSlide(9)"></span>
+                <span class="dot" onclick="currentSlide(10)"></span>
             </div>
         </section>
         
