Change iframe + update faq page

--- a/bestPlay.html
+++ b/bestPlay.html
@@ -29,34 +29,34 @@
         <h1>All Time Lakers Top 10 Play</h1>
         <div id="allVid">
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no10.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no9.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no8.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no7.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no6.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no5.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no4.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no3.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no2.MOV" width="450" height="300" controls muted></video>
             </div>
             <div>
-                <iframe width="450" height="300" src="https://www.youtube.com/embed/UvkUdFeRgUc?si=ZYhK_Vj-nuVZbuCX&amp;start=20&end=33" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <video src="./Asset Video/no1.MOV" width="450" height="300" controls muted></video>
             </div>
         </div>
     </div>
