--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,32 @@
         <br>
         <h3>Where can I buy Lakers tickets?</h3>
         <p>Lakers single-game tickets can be bought on <a href="axs.com">AXS.com</a></p>
-    
+        <h2>Los Angeles Lakers Team</h2>
+        <br>
+        <h3>How Many NBA Titles have the Lakers won?</h3>
+        <p>17.</p>
+        <p>1949, 1950, 1952, 1953, 1954, 1972, 1980, 1982, 1985, 1987, 1988, 2000, 2001, 2002, 2009, 2010, and 2020</p>
+        <br>
+        <h3>How many Division Titles have the Lakers won?</h3>
+        <p>33.</p>
+        <p>1950, 1951, 1953, 1954, 1962, 1963, 1965, 1966, 1969, 1971, 1972, 1973, 1974, 1977, 1980, 1982, 1983, 1984, 1985, 1986, 1987, 1988, 1989, 1990, 2000, 2001, 2004, 2008, 2009, 2010, 2011, 2012, and 2020</p>
+        <br>
+        <h3>What are the Lakers known for?</h3>
+        <p>The Lakers are one of the most successful professional franchises in all American sports. The franchise has won a combined 17 NBA Titles.</p>
+        <br>
+        <h3>What Lakers have won the NBA MVP Award?</h3>
+        <p>Magic Johnson (3), Kareem Abdul-Jabbar (3), Shaquille O'Neal (1), Kobe Bryant (1)</p>
+        <br>
+        <h2>LakersNation.com</h2>
+        <br>
+        <h3>Do the Los Angeles Lakers own LakersNation.com?</h3>
+        <p>No. LakersNation.com is an independent owned and operated website that covers the Los Angeles Lakers</p>
+        <br>
+        <h3>Who owns LakersNation.com?</h3>
+        <p>LakersNation.com is owned by <a href="#">Medium Large Sports Media.</a></p>
+        <br>
+        <h3>Where is LakersNation.com located?</h3>
+        <p>LakersNation.com is operated out of Tustin, California with a distributed editorial team across the USA.</p>
     </div>
 </body>
 </html>
