--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakers Fan Site</title>
     <link rel="stylesheet" href="./css/indexStyle.css">
+    <link rel="stylesheet" href="./css/faq.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="javascript.js"></script>
 </head>
@@ -16,14 +17,41 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" id="nav1">Home</a></li>
-            <li><a href="rumours.html" id="nav2">Rumours</a></li>
+            <!-- <li><a href="index.html" id="nav1">Home</a></li> -->
+            <li><a href="index.html" id="nav2">Home</a></li>
             <li><a href="playerStaff.html" id="nav3">Players and Coaches</a></li>
             <li><a href="bestPlay.html" id="nav4">Best Play of Lakers</a></li>
             <li><a href="faq.html" id="nav5">FAQ</a></li>
             <li><a href="about.html" id="nav6">About</a></li>
         </ul>
     </nav>
-
+    <div class="content">
+        <img src="./Asset Image/lakersnation_logo_mobile.png" alt="">
+        <h1>About Lakers Nation</h1>
+        <br>
+        <p>Lakers Nation is your home for Los Angeles Lakers coverage, news, analysis, rumors, and score updates. Working out of our offices in Southern California, we cover the team you love 24/7 in ways no mainstream media outlet can — from practices to game day and everything in between</p>
+        <p>We are first and foremost true die-hards and are proud of being Lakers fans. We are committed to keeping you up to date each day with all the latest from Lakerland. At the end of the day, we strive to be all things Lakers.</p>
+        <br>
+        <h2>Contact Us</h2>
+        <br>
+        <p>LakersNation.com <br>
+            c/o MediumLarge Sports Media <br>
+            13217 Jamboree Rd #151  <br>
+            Tustin CA 92782
+        </p>
+        <h2>Follow Lakers Nation</h2>
+        <br>
+        <p>Facebook: Over 3 million fans can’t be wrong! Our fansite is the largest Lakers community on Facebook. We share all the latest breaking news, run promotions, and contests, as well as ask questions from the fans to share their take on all the happenings in Los Angeles.</p>
+        <br>
+        <p>Twitter: We post all our stories about Laker’s news and editorials, as well as provide a comprehensive ‘Twitter-Cast’ of each game during the season. </p>
+        <br>
+        <p>Podcast: Our full-length Lakers Nation Podcast features host Trevor Lane and a variety of guests discussing all things Lakers. The Lakers Nation News Feed is our quick-hitter pod, gives an in-depth analysis of breaking news in short, easily consumed shows.</p>
+        <br>
+        <p>YouTube: We post exclusive interviews, practice reports from the Toyota Sports Center, and post-game reports from Crypto.com Center.</p>
+        <br>
+        <p>Instagram: We post pictures and videos from team practices and games, as well as ‘Player of the Game’ graphics for home and away. </p>
+        <br>
+        <h2>Follow Lakers Nation's Reporters</h2>
+    </div>
 </body>
 </html>
