--- a/faq.html
+++ b/faq.html
@@ -17,8 +17,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" id="nav1">Home</a></li>
-            <li><a href="rumours.html" id="nav2">Rumours</a></li>
+            <!-- <li><a href="index.html" id="nav1">Home</a></li> -->
+            <li><a href="index.html" id="nav2">Home</a></li>
             <li><a href="playerStaff.html" id="nav3">Players and Coaches</a></li>
             <li><a href="bestPlay.html" id="nav4">Best Play of Lakers</a></li>
             <li><a href="faq.html" id="nav5">FAQ</a></li>
@@ -26,6 +26,7 @@
         </ul>
     </nav>
     <div class="content">
+        <img src="./Asset Image/lakersnation_logo_mobile.png" alt="">
         <h1>FAQ: LakersNation Frequently Asked Questions</h1>
         <br>
         <p>This FAQ page was created to provide you with immediate answers to your questions about LakersNation.com. If you are unable to find an answer to your question on this FAQ page,  please drop us a line by clicking on Contact Us.</p>
