--- a/playerStaff.html
+++ b/playerStaff.html
@@ -17,8 +17,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html" id="nav1">Home</a></li>
-            <li><a href="rumours.html" id="nav2">Rumours</a></li>
+            <!-- <li><a href="index.html" id="nav1">Home</a></li> -->
+            <li><a href="index.html" id="nav2">Home</a></li>
             <li><a href="playerStaff.html" id="nav3">Players and Coaches</a></li>
             <li><a href="bestPlay.html" id="nav4">Best Play of Lakers</a></li>
             <li><a href="faq.html" id="nav5">FAQ</a></li>
